prevent footer overflow

--- a/assets/admin/css/style.css
+++ b/assets/admin/css/style.css
@@ -930,3 +930,12 @@ body.post-new-php.post-type-tinypress_link #wpwrap,
 body.post-php.post-type-tinypress_link #wpwrap {
     display: inline-block;
 }
+
+body.tinypress_link_page_tinypress-logs #wpcontent {
+    margin-bottom: 100px;
+    padding-bottom: 120px;
+}
+
+body.tinypress_link_page_tinypress-logs #wpwrap {
+    display: inline-block;
+}
